2016-07-14  John Wilander  <wilander@apple.com>

        Remove credentials in URL when accessed through location.href
        https://bugs.webkit.org/show_bug.cgi?id=139562
        <rdar://problem/27331164>

        Reviewed by Brent Fulgham.

        The reason for this change is to not allow scripts on the page to
        exfiltrate username and password from the URL.

        * http/tests/security/location-href-clears-username-password-expected.txt: Added.
        * http/tests/security/location-href-clears-username-password.html: Added.
            Test case adapted from https://src.chromium.org/viewvc/blink?revision=189367&view=revision.

2016-07-24  Wenson Hsieh  <wenson_hsieh@apple.com>

        The web process hangs when computing elements-based snap points for a container with large max scroll offset
        https://bugs.webkit.org/show_bug.cgi?id=152605
        <rdar://problem/25353661>

        Reviewed by Simon Fraser.

        Adds a scroll snap offset computation test case that would have previously
        caused the web process to hang before this patch.

        * css3/scroll-snap/scroll-snap-elements-container-larger-than-children-expected.txt: Added.
        * css3/scroll-snap/scroll-snap-elements-container-larger-than-children.html: Added.

2016-06-30  Antoine Quint  <graouts@apple.com>

        Drawing an SVG image into a <canvas> that is not in the DOM draws the wrong region
        https://bugs.webkit.org/show_bug.cgi?id=159276

        Reviewed by Dean Jackson.

        Adding a series of new tests to check we correctly respect mismatching source and
        destination rectangles with SVG images as sources, both with the source <img> element
        being present and absent from the DOM, and explicit sizes being set or not set.

        * svg/as-image/img-with-svg-resource-in-dom-and-drawImage-expected.html: Added.
        * svg/as-image/img-with-svg-resource-in-dom-and-drawImage.html: Added.